src/test/deca/context/valid/oracle/override_method.deca
class A{
    void m(){
        print("ok");
    }
}

class B extends A{
    void m(){
        print("OK");
    }
}