src/test/deca/context/invalid/oracle/condition_while_string.deca
{
    while("54"){
        print();
    }
}